# ssl_checker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.github/workflows/: build.yml  general.yml
src/: certs.rs  config.rs  errors.rs  formatter.rs  lib.rs  main.rs  slack_webhook.rs
tests/: bad_ssl.rs
