[package]
name = "ssl_checker"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ssl_checker"
path = "src/main.rs"



[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12.18", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "tracing"] }
x509-parser = { version = "0.17.0", features = ["validate", "verify"] }
url = "2.5.4"
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.10"
